build(eslint): prohibit .bind() and () => {} in JSX props

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,7 @@ rules:
         ImportDeclaration: true
   no-undef-init: warn
   no-undefined: warn
+  react/jsx-no-bind: warn
   computed-property-spacing:
     - warn
     - never
